fixed incorrect history-diff dialog title layout on Firefox

--- a/app/assets/stylesheets/history_diff.css.scss
+++ b/app/assets/stylesheets/history_diff.css.scss
@@ -22,15 +22,11 @@
 
   #title {
     font-size: 2.1em;
-    &:before { content: $thin-space; }
-    &:after  { content: $thin-space; }
-    position: relative;
-    bottom: 5px;
   }
 
   label {
     position: relative;
-    top: 7px;
+    top: 10px;
   }
 
   #traffic-lights {
